--- a/sample_data.xaml
+++ b/sample_data.xaml
@@ -1,9 +1,27 @@
 !!!xml1.0
 
 -sample_qty = 'sample.qty_label'
+-partner_type = 'sample.partner_type'
 
 ~openerp
     ~data noupdate='0'
+
+        // initial partner segments
+
+        ~record model=partner_type #sample_partner_filter_all_customers
+            @name: All Customers
+            @default eval='1'
+            @partner_domain: [('is_company','=',1),('customer','=',1)]
+
+        ~record model=partner_type #sample_partner_filter_all_vendors
+            @name: All Vendors
+            @default eval='0'
+            @partner_domain: [('is_company','=',1),('supplier','=',1)]
+
+        ~record model=partner_type #sample_partner_filter_all_other
+            @name: All Other
+            @default eval='0'
+            @partner_domain: [('is_company','=',1),('customer','=',0),('supplier','=',0)]
 
         // common quantities
 
