--- a/sample_view.xaml
+++ b/sample_view.xaml
@@ -30,6 +30,7 @@
                                 by
                                 @target_date .oe_inline writeonly="groups('base.group_sale_salesman,sample.group_sample_user')"
                             @send_to on_change='onchange_send_to(send_to, user_id, contact_id, partner_id, request_ship, context)' widget='radio' writeonly="groups('base.group_sale_salesman,sample.group_sample_user')"
+                            @partner_type $Company_Filter widget='selection' on_change='onchange_partner_type(partner_type, partner_id, context)' options="{'limit':15, 'create':0, 'create_edit':0}"
                             @partner_id on_change='onchange_partner_id(send_to, user_id, contact_id, partner_id, context)' options="{'limit':15, 'create':0, 'create_edit':0}" domain="['|',('customer','=',1),('user_ids','!=',False)]" writeonly="groups('base.group_sale_salesman,sample.group_sample_user')"
                             @contact_id on_change='onchange_contact_id(send_to, user_id, contact_id, partner_id, context)' options="{'limit':10, 'create':0, 'create_edit':1}" attrs="{'readonly': [('partner_id','=',False)], 'invisible':[('id','!=',False),('partner_id','!=',False),('partner_is_company','=',False)]}" writeonly="groups('base.group_sale_salesman,sample.group_sample_user')" context="{'default_parent_id':partner_id}"
                         ~group colspan='3'
@@ -109,6 +110,25 @@
 
         ~menuitem @Samples #menu_sales_sample parent='base.menu_sales' action='sample_request_action'
 
+        ~record model=view #sample_partner_type_form
+            @name: sample.partner_type.form
+            @model: sample.partner_type
+            @arch type='xml'
+                ~tree $Sample_Partner_Type editable='bottom'
+                    @name
+                    @partner_domain
+                    @default
+
+        ~record model=act_window #sample_partner_type_action
+            @name: Partner Segmentation
+            @res_model: sample.partner_type
+            @view_type: form
+            @view_mode: tree
+            @view_id ref='sample_partner_type_form'
+
+        ~menuitem @Samples sequence='99' parent='base.menu_base_config' groups='base.group_sale_manager' #menu_sample_config
+        ~menuitem @Partner_Segmentation parent='menu_sample_config' #menu_sample_config_partner_segmentation action='sample_partner_type_action'
+
         ~record model=view #sample_product_list
             @name: sample.product.list
             @model: sample.product
@@ -122,8 +142,10 @@
                     @product_lot_used writeonly="groups('sample.group_sample_user,sample.group_sample_picker')"
                     @product_cost sum='Total Cost' widget='monetary' groups='base.group_sale_salesman'
 
-        ~menuitem @Samples groups="sample.group_sample_user,sample.group_sample_shipping,sample.group_sample_guest" #sample_main
+        ~menuitem @Samples groups="sample.group_sample_user,sample.group_sample_shipping,sample.group_sample_picking,sample.group_sample_guest" #sample_main
         ~menuitem @Samples sequence='10' parent='sample_main' #sample_sub
         ~menuitem @Samples sequence='10' parent='sample_sub' action='sample_request_action' #menu_sample_sample
         ~menuitem @Customers sequence='20' parent='sample_sub' action='base.action_partner_customer_form' #menu_sample_customer
         ~menuitem @Products sequence='30' parent='sample_sub' action='product.product_normal_action' #menu_sample_product
+        ~menuitem @Configuration sequence='40' parent='sample_main' #sample_sub_config
+        ~menuitem @Partner #menu_sample_partner_type_config parent='sample_sub_config' action='sample_partner_type_action'
