--- a/res_partner_view.xaml
+++ b/res_partner_view.xaml
@@ -12,7 +12,7 @@
                     ~page $Sample_Requests
                         ~group
                             ~separator $Active_Requests
-                            ~button name='%(sample_request_action)d' type='action' $History .oe_right context="{'search_default_partner_id': active_id, 'default_partner_id': active_id}"
+                            ~button name='%(sample_request_history_action)d' type='action' $History .oe_right context="{'search_default_partner_id': active_id}" 
                         @sample_request_ids nolabel='1'
                             ~tree
                                 @user_id
