--- a/sample_view.xaml
+++ b/sample_view.xaml
@@ -18,8 +18,6 @@
                             @rush .oe_highlight .oe_text_center .oe_bold attrs="{'invisible': ['|',('rush','=',False),('state','in',['complete','cancelled'])], 'readonly':True}"
                     @id invisible='1'
                     @partner_is_company invisible='1'
-                    ~span
-                        @printer_friendly .oe_right .oe_edit_hide nolabel='1' style='text-align: right !important'
                     ~group col='5'
                         ~group colspan='2'
                             @department widget='radio' writeonly="groups('base.group_sale_salesman,sample.group_sample_user')"
@@ -173,3 +171,5 @@
         ~menuitem @Products sequence='30' parent='sample_sub' action='product.product_normal_action' #menu_sample_product
         ~menuitem @Configuration sequence='40' parent='sample_main' #sample_sub_config
         ~menuitem @Partner #menu_sample_partner_type_config parent='sample_sub_config' action='sample_partner_type_action'
+
+        ~report model='sample.request' name='sample.request.report' header='True' auto='True' multi='False' xml='sample/report/sample.xml' xsl='sample/report/sample.xsl' $Sample_Request #report_sample_request_form
