show complete status in widget

--- a/sample_view.xaml
+++ b/sample_view.xaml
@@ -16,7 +16,7 @@
                             ~button @button_sample_submit $Submit .oe_edit_hide .oe_highlight type='object'
                             or
                         ~button @button_cancel $Cancel .oe_edit_hide type='object' attrs="{'invisible': [('state','in', ['complete','cancel'])]}"
-                        @state widget='statusbar' statusbar_visible='production,shipping,transit' statusbar_invisible='cancel'
+                        @state widget='statusbar' statusbar_visible='production,shipping,transit,complete' statusbar_invisible='cancel'
                         ~h2
                             @rush .oe_highlight .oe_text_center .oe_bold attrs="{'invisible': ['|',('rush','=',False),('state','in',['complete','cancelled'])], 'readonly':True}"
                     @id invisible='1'
