--- a/sample_view.xaml
+++ b/sample_view.xaml
@@ -39,6 +39,7 @@
                             @partner_type $Company_Filter widget='selection' on_change='onchange_partner_type(partner_type, partner_id, context)' options="{'limit':15, 'create':0, 'create_edit':0}"
                             @partner_id on_change='onchange_partner_id(send_to, user_id, contact_id, partner_id, context)' options="{'limit':15, 'create':0, 'create_edit':0}" domain="['|','|',('xml_id','!=',False),('customer','=',1),('user_ids','!=',False)]" writeonly="groups('base.group_sale_salesman,sample.group_sample_user')" context="{'show_fis': True, 'active_test': False}"
                             @contact_id on_change='onchange_contact_id(send_to, user_id, contact_id, partner_id, context)' options="{'limit':10, 'create':0, 'create_edit':1}" attrs="{'readonly': [('partner_id','=',False)], 'invisible':[('id','!=',False),('partner_id','!=',False),('partner_is_company','=',False)]}" writeonly="groups('base.group_sale_salesman,sample.group_sample_user')" context="{'default_parent_id':partner_id, 'combine_company':False}"
+                            @phone readonly='1'
                         ~group colspan='3'
                             @request_ship writeonly="groups('base.group_sale_salesman,sample.group_sample_user')"
                             @address_type widget='radio' options="{'horizontal':1}" writeonly="groups('base.group_sale_salesman,sample.group_sample_user')"
